fixed contrast issue in scoreboard

--- a/frontend/src/css/ScoreBoard.css
+++ b/frontend/src/css/ScoreBoard.css
@@ -47,8 +47,8 @@
   color: black;
 }
 
-.player-points {
+.current-player-points {
   font-size: 1rem;
-  color: black;
+  color: #666;
   text-align: center;
 }
